# pLam

./: .gitignore  .plam-history  grammar.bnf  pLam.cabal  stack.yaml
app/: Main.hs
src/: Config.hs  Evaluator.hs  HaskelineClass.hs  Helper.hs  Parser.hs  Reducer.hs  Schemes.hs  Syntax.hs
