cabal-version: >=1.10
name: pLam
version: 2.2.0
license: BSD3
license-file: LICENSE
copyright: 2019 Sandro Lovnički
maintainer: lovnicki.sandro@gmail.com
author: Sandro Lovnički
homepage: https://github.com/sandrolovnicki/pLam#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/sandrolovnicki/pLam


library
    exposed-modules:
        Config
        Evaluator
        HaskelineClass
        Helper
        Parser
        Reducer
        Syntax
        Schemes
    ghc-options:
        -Wall
        -XOverloadedStrings
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        containers -any,
        free -any,
        haskeline -any,
        kan-extensions -any,
        mtl -any,
        parsec -any,
        parser-combinators -any,
        megaparsec -any,
        recursion-schemes -any,
        repline -any,
        text -any,
        transformers -any

executable plam
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base -any,
        containers -any,
        directory -any,
        haskeline -any,
        mtl -any,
        parsec -any,
        pLam -any,
        text -any
